pqrs/IaC/backend/co_pqrs_back_agent/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: co-pqrs-back-agent
  labels:
    app: co-pqrs-back-agent
    app.kubernetes.io/name: co-pqrs-back-agent
    app.kubernetes.io/part-of: backend
    app.kubernetes.io/component: backend-agent
    app.kubernetes.io/version: v2
    app.openshift.io/runtime: python
spec:
  replicas: 3
  selector:
    matchLabels:
      app: co-pqrs-back-agent
  template:
    metadata:
      labels:
        app: co-pqrs-back-agent
        app.kubernetes.io/name: co-pqrs-back-agent
        app.kubernetes.io/part-of: backend
        app.kubernetes.io/component: backend-agent
        app.kubernetes.io/version: v2
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
    spec:
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      enableServiceLinks: false

      containers:
        - name: agent
          image: quay.apps.work.ocp.co.igrupobbva/pqr-genai/co_pqrs_back_agent:1.0.17
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

          volumeMounts:
            - name: conf-pqr-env
              mountPath: /app/.env
              subPath: .env


          startupProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 30
            periodSeconds: 10
            timeoutSeconds: 5

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"

      volumes:
        - name: conf-pqr-env
          configMap:
            name: conf-pqr-env
