pqrs/IaC/backend/co_pqrs_back_agent/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: co-pqrs-back-agent
  labels:
    app.kubernetes.io/part-of: backend
spec:
  selector:
    app: co-pqrs-back-agent
  ports:
    - name: http
      port: 8000
      targetPort: 8000

  type: ClusterIP
