pqrs/IaC/backend/co_pqrs_back_agent/05-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: co-pqrs-back-agent
  labels:
    app.kubernetes.io/part-of: backend
spec:
  host: agent-pqr-genai-dev.apps.work.ocp.co.igrupobbva
  to:
    kind: Service
    name: co-pqrs-back-agent
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
